--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 requests==2.27.1
+psycopg2-binary==2.9.3
 SQLAlchemy==1.4
 urllib3==1.26.8
 visitor==0.1.3
